<resources>
    <string name="app_name">LocalNews</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_details">MovieDetail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="top_news">Top News</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

</resources>
