<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_top"
            android:title="@string/top_news" />
        <item
            android:id="@+id/id_business"
            android:title="@string/business" />

        <item
            android:id="@+id/id_entertainment"
            android:title="@string/entertainment" />


        <item
            android:id="@+id/id_lifestyle"
            android:title="@string/lifestyle" />

        <item
            android:id="@+id/id_sports"
            android:title="@string/sports" />


        <item
            android:id="@+id/id_tech"
            android:title="@string/technology" />
    </group>

</menu>